[package]
name = "unflow"
version = "0.0.1"
authors = ["Inherd Group <group@inherd.org>", "Phodal Huang <h@phodal.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/inherd/unflow"
documentation = "https://github.com/inherd/unflow"
homepage = "https://github.com/inherd/unflow"
description = """
Unflow is a DSL to convert design to code.
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
    ".github/*",
    ".gitattributes",
    ".adr.json",
]

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
