[package]
name = "unflow"
version = "0.0.1"
authors = ["Inherd Group <group@inherd.org>", "Phodal Huang <h@phodal.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/inherd/unflow"
documentation = "https://github.com/inherd/unflow"
homepage = "https://github.com/inherd/unflow"
description = """
Unflow is a DSL to convert design to code.
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
    ".github/*",
    ".gitattributes",
    ".adr.json",
]

[dependencies]
antlr-rust = { version = "=0.2.0" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
